WOT-terms -> keridoc

--- a/static/slack/html/keriml.html
+++ b/static/slack/html/keriml.html
@@ -1528,7 +1528,7 @@
 			<div class="card-body">
 				<div class="card-text msg">still getting this message if I try to see the assets for this screen</div>
 				<div class="card-text imgInMessage"><img
-						src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/keriml/Screenshot 2022-03-21 at 22.08.09.png"
+						src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/keriml/Screenshot 2022-03-21 at 22.08.09.png"
 						alt="Screenshot 2022-03-21 at 22.08.09.png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -1551,7 +1551,7 @@
 				<div class="card-text msg">and if I tap on some element I don’t see the specs like in this screenshot
 				</div>
 				<div class="card-text imgInMessage"><img
-						src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/keriml/Screenshot 2022-03-21 at 22.10.24.png"
+						src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/keriml/Screenshot 2022-03-21 at 22.10.24.png"
 						alt="Screenshot 2022-03-21 at 22.10.24.png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -2075,7 +2075,7 @@
 						exportable asset is time in upper left corner of this screen :thinking_face:
 				</div>
 				<div class="card-text imgInMessage"><img
-						src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/keriml/Screenshot 2022-03-24 at 21.48.12.png"
+						src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/keriml/Screenshot 2022-03-24 at 21.48.12.png"
 						alt="Screenshot 2022-03-24 at 21.48.12.png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -2204,7 +2204,7 @@
 						I would like to know for example if I’d continue with creating AID should user input (alias,
 						witnesses, other config) be stored in secured storage</div>
 				<div class="card-text imgInMessage"><img
-						src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/keriml/Screenshot 2022-04-07 at 12.43.43.png"
+						src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/keriml/Screenshot 2022-04-07 at 12.43.43.png"
 						alt="Screenshot 2022-04-07 at 12.43.43.png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -2377,7 +2377,8 @@
 						<@U024KC347B4>, would it make sense as a next step to be focused on creating AID with
 							keri-swift? I know that you haven’t touched it for a long time but it might be a good idea
 							to work on both in parallel so maybe I can try to switch to it and figure out something with
-							your guidance.</div>
+							your guidance.
+				</div>
 				<div class="card-text imgInMessage"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -2425,7 +2426,7 @@
 
 					I’ve created PR but it seems like I don’t have permission to merge:</div>
 				<div class="card-text imgInMessage"><img
-						src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/keriml/Screenshot 2022-06-02 at 10.03.52.png"
+						src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/keriml/Screenshot 2022-06-02 at 10.03.52.png"
 						alt="Screenshot 2022-06-02 at 10.03.52.png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
