--- a/slack/html/signify.html
+++ b/slack/html/signify.html
@@ -2638,7 +2638,7 @@
 					personal devices that are mostly used as cryptocurrency wallets. Private keys are generated in
 					device and never leaves it, so the shim ask to create the signatures.</div>
 				<div class="card-text imgInMessage"><img
-						src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/signify/Captura de pantalla 2023-05-08 a la(s) 10.33.17 a.m..png"
+						src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/signify/Captura de pantalla 2023-05-08 a la(s) 10.33.17 a.m..png"
 						alt="Captura de pantalla 2023-05-08 a la(s) 10.33.17 a.m..png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -5498,7 +5498,7 @@ So, the higher the more entropy but slower.</div>
 			
   			<div class="card-body">    
             	<div class="card-text msg">Does the format of the timestamp matter for checking the signature? I am noticing that JS and python display it differently?</div>
-            	<div class="card-text imgInMessage"><img src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/signify/Screenshot 2023-05-20 at 9.07.05 PM.png" alt="Screenshot 2023-05-20 at 9.07.05 PM.png"></div>
+            	<div class="card-text imgInMessage"><img src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/signify/Screenshot 2023-05-20 at 9.07.05 PM.png" alt="Screenshot 2023-05-20 at 9.07.05 PM.png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
     			<div><p>Number of replies: 0</p></div>
@@ -6056,7 +6056,7 @@ Columns O through Q refer to KERIA.</div>
 							</div>
 							
 							<div class="card-body">    
-								<div class="card-text msg"><https://github.com/WebOfTrust/WOT-terms#levels-of-understanding></div>
+								<div class="card-text msg"><https://github.com/WebOfTrust/keridoc#levels-of-understanding></div>
 								
 							</div>
 						</div>
@@ -6896,7 +6896,7 @@ Columns O through Q refer to KERIA.</div>
 			</div>
 			
   			<div class="card-body">    
-            	<div class="card-text msg"><https://github.com/WebOfTrust/WOT-terms#levels-of-understanding></div>
+            	<div class="card-text msg"><https://github.com/WebOfTrust/keridoc#levels-of-understanding></div>
             	<div class="card-text imgInMessage"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
@@ -7485,7 +7485,7 @@ The link is based on line-numbers and filenames, so the anchor might point to th
 			
   			<div class="card-body">    
             	<div class="card-text msg">updating keripy solved my problem :upside_down_face:</div>
-            	<div class="card-text imgInMessage"><img src="https://raw.githubusercontent.com/WebOfTrust/WOT-terms/main/static/slack/img/signify/Captura de pantalla 2023-06-09 a la(s) 10.40.09 a.m..png" alt="Captura de pantalla 2023-06-09 a la(s) 10.40.09 a.m..png"></div>
+            	<div class="card-text imgInMessage"><img src="https://raw.githubusercontent.com/WebOfTrust/keridoc/main/static/slack/img/signify/Captura de pantalla 2023-06-09 a la(s) 10.40.09 a.m..png" alt="Captura de pantalla 2023-06-09 a la(s) 10.40.09 a.m..png"></div>
 			</div>
 			<div class="card-footer text-body-secondary">
     			<div><p>Number of replies: 0</p></div>
